--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -20747,3 +20747,76 @@ series:
         url: https://www.meetup.com/strv-meetups/events/288874466/
         dtstart: 2022-10-13 18:00:00+02:00
         dtend: 2022-10-13 20:00:00+02:00
+  - meetupcom:
+      meta_description: '**[MAKE SURE TO SECURE A TICKET VIA EVENTBRITE, PLEASE](https://www.eventbrite.com/e/ios-meetup-modernization-persistence-brn-tickets-449444770407?aff=meetup)**
+
+
+        Imagine th'
+      og_title: 'iOS Meetup: Modernization & Persistence BRNO, Tue, Nov 8, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/strv-meetups/events/289309373/
+      ical:
+        summary: 'iOS Meetup: Modernization & Persistence BRNO'
+        description: 'STRV Meetups
+
+          Tuesday, November 8 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/ios-meetup-modernization-persistence-brn-tickets-449444770407?aff=meetup)** Imagine this: You have a legacy iOS codeba...
+
+          \nhttps://www.meetup.com/strv-meetups/events/289309373/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289309373@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289309373/
+        dtstart: 2022-11-08 18:00:00+01:00
+        dtend: 2022-11-08 22:00:00+01:00
+  - meetupcom:
+      meta_description: '[ ](https://www.eventbrite.com/e/ios-meetup-modernization-persistence-prg-tickets-449449384207?aff=meetup)**[MAKE SURE TO SECURE A TICKET VIA EVENTBRITE, PLEASE](https://ww'
+      og_title: 'iOS Meetup: Modernization & Persistence PRG, Thu, Nov 10, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/strv-meetups/events/289309509/
+      ical:
+        summary: 'iOS Meetup: Modernization & Persistence PRG'
+        description: 'STRV Meetups
+
+          Thursday, November 10 at 6:00 PM
+
+
+          (https://www.eventbrite.com/e/ios-meetup-modernization-persistence-prg-tickets-449449384207?aff=meetup)**(https://www.eventbrite.com/e/ios-meetup-mode...\n
+
+          https://www.meetup.com/strv-meetups/events/289309509/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289309509@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289309509/
+        dtstart: 2022-11-10 18:00:00+01:00
+        dtend: 2022-11-10 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV Design Meetup
+        description: 'STRV Meetups
+
+          Thursday, October 13 at 6:00 PM
+
+
+          **🔥 (https://www.eventbrite.com/e/strv-design-meetup-tickets-429596002207?aff=meetup) 🔥** Curious about how to design an app worthy of an Apple Design...
+
+
+          https://www.meetup.com/strv-meetups/events/288874466/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288874466@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/288874466/
+        dtstart: 2022-10-13 18:00:00+02:00
+        dtend: 2022-10-13 20:00:00+02:00
