data: cron update

--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -38990,3 +38990,62 @@ series:
         url: https://www.meetup.com/prague-devops-meetup/events/281198432/
         dtstart: 2021-11-03 18:00:00+01:00
         dtend: 2021-11-03 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Hello doers,
+
+
+        we are meeting after long time in person.
+
+
+        Build of container images in the “cloud native” CI pipelines
+
+        by Martin Odstrcilik from Labyrinth labs
+
+
+        * We will ha'
+      og_title: November DevOps Meetup, Tue, Nov 15, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/prague-devops-meetup/events/289325884/
+      ical:
+        summary: November DevOps Meetup
+        description: 'Prague DevOps Meetup
+
+          Tuesday, November 15 at 6:00 PM
+
+
+          Hello doers, we are meeting after long time in person. Build of container images in the “cloud native” CI pipelinesby Martin Odstrcilik from Labyrinth...
+
+
+          https://www.meetup.com/prague-devops-meetup/events/289325884/'
+        location: Forum Karlín (Pernerova 51, Praha 8-Karlín, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289325884@meetup.com
+        url: https://www.meetup.com/prague-devops-meetup/events/289325884/
+        dtstart: 2022-11-15 18:00:00+01:00
+        dtend: 2022-11-15 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: DevOps Meetup at mastercard
+        description: 'Prague DevOps Meetup
+
+          Wednesday, June 22 at 5:30 PM
+
+
+          Hello Doers, For this event you need to register on (https://www.eventbrite.com/e/devops-meetup-at-mastercard-tickets-344720687857) Are you curious ab...
+
+
+          https://www.meetup.com/prague-devops-meetup/events/286587425/'
+        location: Pernerova 35 (Pernerova 35, Karlín, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286587425@meetup.com
+        url: https://www.meetup.com/prague-devops-meetup/events/286587425/
+        dtstart: 2022-06-22 17:30:00+02:00
+        dtend: 2022-06-22 20:30:00+02:00
