data: cron update

--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -14780,21 +14780,9 @@ series:
         dtstart: 2022-08-16 18:30:00+02:00
         dtend: 2022-08-16 20:30:00+02:00
   - meetupcom:
-      meta_description: '• How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-        '
-      og_title: GDG Garage Prague One, Tue, Oct 25, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gdgprague/events/xqcsqsydcnbhc/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -18907,3 +18895,39 @@ series:
         url: https://www.meetup.com/gdgprague/events/288627747/
         dtstart: 2022-10-11 18:30:00+02:00
         dtend: 2022-10-11 20:30:00+02:00
+  - meetupcom:
+      meta_description: '• How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One, Tue, Dec 20, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/gdgprague/events/xqcsqsydcqbbc/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, December 20 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/xqcsqsydcqbbc/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydcqbbc@meetup.com
+        url: https://www.meetup.com/gdgprague/events/xqcsqsydcqbbc/
+        dtstart: 2022-12-20 18:30:00+01:00
+        dtend: 2022-12-20 20:30:00+01:00
