--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -24543,11 +24543,9 @@ series:
         dtstart: 2022-09-29 18:00:00+02:00
         dtend: 2022-09-29 21:00:00+02:00
   - meetupcom:
-      meta_description: '🚨 Get inspired by people who have stepped up, found their voice, and propelled their careers in leadership roles in the software engineering industry.
-
-        This time we will ta'
-      og_title: 'Engineering Leadership Meetup #5, Tue, Oct 25, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/productboard-meetups/events/289231460/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Engineering Leadership Meetup #5'
         description: 'Productboard Meetups
