--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -17671,12 +17671,9 @@ series:
         dtstart: 2022-05-19 18:00:00+02:00
         dtend: 2022-05-19 22:00:00+02:00
   - meetupcom:
-      meta_description: 'Zveme Vás na 52. sraz přátel PHP v Praze v nových prostorách našeho partnera **LMC** v **Dock in Five v Libni**.
-
-
-        Tento sraz bude speciální! Mimo přednášky na uvítanou bude'
-      og_title: Speciální 52. sraz PHP v Praze v LMC - panelová diskuze (feat. Fuckupy v IT), Tue, Oct 25, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/pražske-srazy-přatel-php-pehapkari-cz/events/288964390/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Speciální 52. sraz PHP v Praze v LMC - panelová diskuze (feat. Fuckupy v IT)
         description: 'Pražské srazy přátel PHP - Pehapkari.cz
@@ -19017,3 +19014,75 @@ series:
         url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288525231/
         dtstart: 2022-10-06 18:00:00+02:00
         dtend: 2022-10-06 23:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 51. sraz přátel PHP v Praze v CareCloud
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, October 6 at 6:00 PM
+
+
+          Zveme Vás na další setkání přátel PHP v Praze, tentokrát v krásných prostorách CareCloud na Praze 9. Náš partner si pro nás připravil zajímavé přednáš...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288525231/'
+        location: CareCloud CRM (U Elektry 974, Praha 9, Czech Republic 190 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288525231@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288525231/
+        dtstart: 2022-10-06 18:00:00+02:00
+        dtend: 2022-10-06 23:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Jubilejní 50. sraz přátel PHP v Praze v Livesportu
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, September 15 at 6:00 PM
+
+
+          Zveme Vás na jubilejní 50. setkání přátel PHP v Praze\, tentokrát v cool budově Livesport! Čekají nás zajímavé přednášky, networking a nebude chybět an...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288005611/'
+        location: Livesport s.r.o. (Bucharova 2928/14a, Praha-Praha 13, Czech Republic 158 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288005611@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288005611/
+        dtstart: 2022-09-15 18:00:00+02:00
+        dtend: 2022-09-15 23:55:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Letní 49. sraz přátel PHP na terase v Ecomail v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, June 16 at 6:00 PM
+
+
+          Zveme Vás na speciální předprázdninové setkání přátel PHP v Praze, tentokrát na terase v Ecomailu! Čeká nás velmi zajímavá přednáška o Serverless PHP,...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/286099484/'
+        location: Ecomail.cz s.r.o. (Na Zderaze 15, Nové Město, Praha-Praha 2, Czech Republic 120 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286099484@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/286099484/
+        dtstart: 2022-06-16 18:00:00+02:00
+        dtend: 2022-06-17 01:00:00+02:00
