--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -38322,3 +38322,27 @@ series:
         url: https://www.meetup.com/topmonks-caffe/events/288726950/
         dtstart: 2022-10-04 19:00:00+02:00
         dtend: 2022-10-04 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Dezinformace
+        description: 'TopMonks Caffè
+
+          Tuesday, October 4 at 7:00 PM
+
+
+          Tentokrát nás čeká téma dezinformace. Přijďte si poslechnout tři řečníky a otevřít diskuzi na toto aktuální téma **Adéla Klečková** \\- analytik\\, Germ...
+
+
+          https://www.meetup.com/topmonks-caffe/events/288726950/'
+        location: Loft N8 Restaurant and Shisha Lounge (Nekázanka 883/8, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288726950@meetup.com
+        url: https://www.meetup.com/topmonks-caffe/events/288726950/
+        dtstart: 2022-10-04 19:00:00+02:00
+        dtend: 2022-10-04 21:00:00+02:00
