--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -25696,27 +25696,21 @@ series:
         dtstart: 2022-09-14 18:00:00+02:00
         dtend: 2022-09-14 20:00:00+02:00
   - meetupcom:
-      meta_description: '**Pravidelný hospodský sraz komunity [Frontendisti.cz](http://frontendisti.cz/)**
-
-
-        **Program a místo budou upřesněny před konáním akce.**
-
-
-        Svoji přednášku můžeš přihlásit n'
-      og_title: 'Brno: Hospodský sraz - listopad, Wed, Nov 9, 2022, 6:00 PM   | Meetup'
+      meta_description: Pravidelný hospodský sraz komunity [Frontendisti.cz](http://frontendisti.cz/). Cílem hospodského srazu je vytvoření diskusního večera. Klasické přednášky tedy nečekejte, za
+      og_title: 'Brno: Diskuzní večer o tom, jak lze efektivně řešit načítání velkých dat, Wed, Nov 9, 2022, 6:00 PM   | Meetup'
       url: https://www.meetup.com/frontendisti/events/288945566/
       ical:
-        summary: 'Brno: Hospodský sraz - listopad'
+        summary: 'Brno: Diskuzní večer o tom, jak lze efektivně řešit načítání velkých dat'
         description: 'Frontendisti.cz
 
           Wednesday, November 9 at 6:00 PM
 
 
-          **Pravidelný hospodský sraz komunity (http://frontendisti.cz/)** **Program a místo budou upřesněny před konáním akce.** Svoji přednášku můžeš přihlási...
+          Pravidelný hospodský sraz komunity (http://frontendisti.cz/). Cílem hospodského srazu je vytvoření diskusního večera. Klasické přednášky tedy nečekejt...
 
 
           https://www.meetup.com/frontendisti/events/288945566/'
-        location: Café Trojka (Dominikánská 9, Brno-Brno-střed, Czech Republic 602 00)
+        location: Živo U Palečka (Koliště 643, Brno-střed, Czech Republic 602 00)
         geo:
           lat: 50.08
           lon: 14.43
@@ -25841,6 +25835,30 @@ series:
         url: https://www.meetup.com/frontendisti/events/289061411/
         dtstart: 2023-02-08 18:00:00+01:00
         dtend: 2023-02-08 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Praha: Hospodský sraz - Vzdělávání a začátky FE vývojářů'
+        description: 'Frontendisti.cz
+
+          Wednesday, October 12 at 6:30 PM
+
+
+          **Hospodské srazy jsou zpět!** V Praze se sejdeme v hospodě k neformálnějšímu setkání, zatímco v Brně bude klasický Frontendistí meetup. Na říjnovém h...
+
+
+          https://www.meetup.com/frontendisti/events/288881300/'
+        location: Café Lajka (U Akademie 366/11, Praha 7-Bubeneč, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288881300@meetup.com
+        url: https://www.meetup.com/frontendisti/events/288881300/
+        dtstart: 2022-10-12 18:30:00+02:00
+        dtend: 2022-10-12 20:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
