--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -25720,23 +25720,17 @@ series:
         dtstart: 2022-11-09 18:00:00+01:00
         dtend: 2022-11-09 20:00:00+01:00
   - meetupcom:
-      meta_description: '**Pravidelný meetup komunity [Frontendisti.cz](http://frontendisti.cz/)**
-
-
-        **Program a místo budou upřesněny před konáním akce.**
-
-
-        Svoji přednášku můžeš přihlásit na odkazu'
-      og_title: 'Praha: listopadový meetup | Frontendisti.cz, Wed, Nov 9, 2022, 6:30 PM   | Meetup'
+      meta_description: 'Je to tu! Vaše pravidelná porce frontendů je zpět a bude to opět jízda, na kterou budete vzpomínat minimálně do příštího roku. Ano, tento rok to bude naše poslední pražská '
+      og_title: 'Praha: Funkcionální programování a Na co si dat pozor než příjmu nabídku, Wed, Nov 9, 2022, 6:30 PM   | Meetup'
       url: https://www.meetup.com/frontendisti/events/288945626/
       ical:
-        summary: 'Praha: listopadový meetup | Frontendisti.cz'
+        summary: 'Praha: Funkcionální programování a Na co si dat pozor než příjmu nabídku'
         description: 'Frontendisti.cz
 
           Wednesday, November 9 at 6:30 PM
 
 
-          **Pravidelný meetup komunity (http://frontendisti.cz/)** **Program a místo budou upřesněny před konáním akce.** Svoji přednášku můžeš přihlásit na odk...
+          Je to tu! Vaše pravidelná porce frontendů je zpět a bude to opět jízda, na kterou budete vzpomínat minimálně do příštího roku. Ano, tento rok to bude ...
 
 
           https://www.meetup.com/frontendisti/events/288945626/'
@@ -25835,6 +25829,30 @@ series:
         url: https://www.meetup.com/frontendisti/events/289061411/
         dtstart: 2023-02-08 18:00:00+01:00
         dtend: 2023-02-08 20:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Praha: Hospodský sraz - Vzdělávání a začátky FE vývojářů'
+        description: 'Frontendisti.cz
+
+          Wednesday, October 12 at 6:30 PM
+
+
+          **Hospodské srazy jsou zpět!** V Praze se sejdeme v hospodě k neformálnějšímu setkání, zatímco v Brně bude klasický Frontendistí meetup. Na říjnovém h...
+
+
+          https://www.meetup.com/frontendisti/events/288881300/'
+        location: Café Lajka (U Akademie 366/11, Praha 7-Bubeneč, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288881300@meetup.com
+        url: https://www.meetup.com/frontendisti/events/288881300/
+        dtstart: 2022-10-12 18:30:00+02:00
+        dtend: 2022-10-12 20:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
