--- a/data/sources/pehapkari-cz.yaml
+++ b/data/sources/pehapkari-cz.yaml
@@ -19758,3 +19758,54 @@ series:
         url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/286099484/
         dtstart: 2022-06-16 18:00:00+02:00
         dtend: 2022-06-17 01:00:00+02:00
+  - meetupcom:
+      meta_description: 'Zveme vás na poslední letošní setkání přátel PHP, tentokrát v kancelářích Ecomailu v centru Prahy.
+
+
+        Náš partner si pro nás připravil zajímavé přednášky, chutné občerstvení '
+      og_title: 53. sraz přátel PHP v Ecomailu v Praze, Thu, Dec 1, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/pražske-srazy-přatel-php-pehapkari-cz/events/289395420/
+      ical:
+        summary: 53. sraz přátel PHP v Ecomailu v Praze
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Thursday, December 1 at 6:00 PM
+
+
+          Zveme vás na poslední letošní setkání přátel PHP, tentokrát v kancelářích Ecomailu v centru Prahy. Náš partner si pro nás připravil zajímavé přednášky...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/289395420/'
+        location: Ecomail.cz s.r.o. (Na Zderaze 15, Nové Město, Praha-Praha 2, Czech Republic 120 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289395420@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/289395420/
+        dtstart: 2022-12-01 18:00:00+01:00
+        dtend: 2022-12-01 23:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Speciální 52. sraz PHP v Praze v LMC - panelová diskuze (feat. Fuckupy v IT)
+        description: 'Pražské srazy přátel PHP - Pehapkari.cz
+
+          Tuesday, October 25 at 6:00 PM
+
+
+          Zveme Vás na 52. sraz přátel PHP v Praze v nových prostorách našeho partnera **LMC** v **Dock in Five v Libni**. Tento sraz bude speciální! Mimo předn...
+
+
+          https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288964390/'
+        location: LMC Ltd. (Menclova 2538/2, Praha 8-Libeň, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288964390@meetup.com
+        url: https://www.meetup.com/pra%C5%BEske-srazy-p%C5%99atel-php-pehapkari-cz/events/288964390/
+        dtstart: 2022-10-25 18:00:00+02:00
+        dtend: 2022-10-25 23:00:00+02:00
