--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -21276,3 +21276,27 @@ series:
         url: https://www.meetup.com/strv-meetups/events/288874466/
         dtstart: 2022-10-13 18:00:00+02:00
         dtend: 2022-10-13 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV Design Meetup
+        description: 'STRV Meetups
+
+          Thursday, October 13 at 6:00 PM
+
+
+          **🔥 (https://www.eventbrite.com/e/strv-design-meetup-tickets-429596002207?aff=meetup) 🔥** Curious about how to design an app worthy of an Apple Design...
+
+
+          https://www.meetup.com/strv-meetups/events/288874466/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288874466@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/288874466/
+        dtstart: 2022-10-13 18:00:00+02:00
+        dtend: 2022-10-13 20:00:00+02:00
