--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -21489,3 +21489,27 @@ series:
         url: https://www.meetup.com/strv-meetups/events/289205511/
         dtstart: 2022-11-01 18:00:00+01:00
         dtend: 2022-11-01 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Q&A with Android BRN
+        description: 'STRV Meetups
+
+          Tuesday, November 1 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/qa-with-android-brn-tickets-444517322277?aff=meetup)** We’ve got a top view, friendly faces, great snacks, cold drinks...
+
+
+          https://www.meetup.com/strv-meetups/events/289205511/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289205511@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289205511/
+        dtstart: 2022-11-01 18:00:00+01:00
+        dtend: 2022-11-01 22:00:00+01:00
