data: cron update

--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -34265,3 +34265,99 @@ series:
         url: https://www.meetup.com/prague-junior-software-developer-course/events/288874783/
         dtstart: 2022-10-11 18:00:00+02:00
         dtend: 2022-10-11 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Online workshop: Základy programování'
+        description: 'Become a software developer from 0
+
+          Wednesday, October 26 at 6:00 PM
+
+
+          Zúčastni se bezplatného online workshopu, kde si se zkušenými mentory vyzkoušíš práci s technologiemi webových stránek skrze společné vytvoření jednod...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/289085006/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289085006@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/289085006/
+        dtstart: 2022-10-26 18:00:00+02:00
+        dtend: 2022-10-26 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?'
+        description: 'Become a software developer from 0
+
+          Monday, October 17 at 6:00 PM
+
+
+          Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš ve specializacích, které nabízíme? Přemýšlíš, že bys začal/a splácet školné až po kurzu a...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/289084949/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289084949@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/289084949/
+        dtstart: 2022-10-17 18:00:00+02:00
+        dtend: 2022-10-17 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Online workshop: Základy programování'
+        description: 'Become a software developer from 0
+
+          Tuesday, October 11 at 6:00 PM
+
+
+          Nenech si utéct příležitost! Vyzkoušej si kódování pod vedením zkušených mentorů. Seznámíš se základy JavaScriptu i platformou Salesforce. Navíc získá...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/288644328/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288644328@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/288644328/
+        dtstart: 2022-10-11 18:00:00+02:00
+        dtend: 2022-10-11 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Online Workshop: Basics of Programming'
+        description: 'Become a software developer from 0
+
+          Tuesday, October 11 at 6:00 PM
+
+
+          We want to show you that coding doesn''t require advanced mathematical or analytical thinking. We believe that everyone can grasp the basics of coding,...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/288874783/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288874783@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/288874783/
+        dtstart: 2022-10-11 18:00:00+02:00
+        dtend: 2022-10-11 21:00:00+02:00
